Fix code smell